# map-annotation-validator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
app/: main.py  predictor.py
src/: color_detector.py  dataset.py  inference.py  inference_keras.py  model.py  model_keras.py  patch_extractor.py  train.py  train_keras.py
